--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
   
 
-
-  <script src="script.js"></script>
+  <div  id="box" data-color="red" data-lg="armenian">afgsagg</div>
+  <script type="module" src="script.js"></script>
+  <script type="module" src="urish.js"></script>
 </body>
 </html>
